--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Launching Soon</title>
   <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" type="image/png" href="icon.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
   <div class="container">
-    <div class="logo">i</div>
+    <!-- Replaced "i" text logo with actual icon image -->
+    <img src="icon.png" alt="Logo" class="logo-img" />
+
     <h1 class="tagline">Launching soon</h1>
 
     <p class="description">
