--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Launching Soon</title>
+
+  <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
+
+  <!-- Favicon -->
   <link rel="icon" type="image/png" href="icon.png" />
+
+  <!-- Fonts: Noto Sans -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet" />
+
+  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
   <div class="container">
-    <!-- Replaced "i" text logo with actual icon image -->
+    <!-- Logo image -->
     <img src="icon.png" alt="Logo" class="logo-img" />
 
     <h1 class="tagline">Launching soon</h1>
