--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <footer class="footer">
       <span><strong>FOR PEOPLE.</strong></span>
       <span><strong>FOR PLANET.</strong></span>
-      <span><strong>FOR THE FUTURE OF WORK.</strong></span>
+      <span class="break-line"><strong>FOR THE FUTURE<br /> OF WORK.</strong></span>
     </footer>
   </div>
 </body>
