mobile footer added

--- a/index.html
+++ b/index.html
@@ -36,10 +36,23 @@
       <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
     </div>
 
+    <!-- Desktop Footer -->
     <footer class="footer">
       <span><strong>FOR PEOPLE.</strong></span>
       <span><strong>FOR PLANET.</strong></span>
       <span class="break-line"><strong>FOR THE FUTURE<br /> OF WORK.</strong></span>
+    </footer>
+
+    <!-- Mobile Footer -->
+    <footer class="footer-mobile">
+      <span><strong>FOR PEOPLE.</strong></span>
+      <span><strong>FOR PLANET.</strong></span>
+      <span class="footer-stack">
+        <strong>FOR THE FUTURE</strong>
+      </span>
+      <span>
+        <strong>OF WORK.</strong>
+      </span>
     </footer>
   </div>
 </body>
